
syntax = "proto3";

package proto;

service Blockchain {
    rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
    rpc GetBlockChain(GetBlockChainRequest) returns (GetBlockChainResponse) {}
}

message AddBlockRequest {
    string data =1;
}

message AddBlockResponse {
    string hash =1;
}

message GetBlockChainRequest {}



message Block {
  string hash = 1;
  string previousHash = 2;
  string data = 3;


}
message GetBlockChainResponse{
 repeated Block blocks = 1; 
}